--- a/index.html
+++ b/index.html
@@ -22,7 +22,22 @@
     </div><!--container end-->
 
     <!--JS-->
+    <script src="https://www.gstatic.com/firebasejs/6.2.0/firebase-app.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
     <script src="container/js/script.js"></script>
+    <script>
+	  // Your web app's Firebase configuration
+	  var firebaseConfig = {
+	    apiKey: "AIzaSyAZ3JiF5pplW1FreWzR66oJIatl20YTg5w",
+	    authDomain: "yodabot-otwjkf.firebaseapp.com",
+	    databaseURL: "https://yodabot-otwjkf.firebaseio.com",
+	    projectId: "yodabot-otwjkf",
+	    storageBucket: "yodabot-otwjkf.appspot.com",
+	    messagingSenderId: "53848255581",
+	    appId: "1:53848255581:web:fe83a9089753292f"
+	  };
+	  // Initialize Firebase
+	  firebase.initializeApp(firebaseConfig);
+  </script>
   </body>
 </html>
